syntax = "proto3";

package information;

option go_package = "./internal/information/grpc;information";

service InformationService {
  rpc CreateOrUpdateInformation(CreateOrUpdateInformationRequest) returns (InformationResponse);

  rpc GetInformationByCvID(GetInformationByCvIDRequest) returns (InformationResponse);

  rpc DeleteInformationByCvID(DeleteInformationByCvIDRequest) returns (DeleteInformationByCvIDResponse);
}

message CreateOrUpdateInformationRequest {
  string cv_id = 2;
  string full_name = 3;
  optional string photo_file_id = 4;
  optional string position = 5;
  optional string location = 6;
  optional string biography = 7;
}

message InformationResponse {
  string id = 1;
  string cv_id = 2;
  string full_name = 3;
  optional string photo_file_id = 4;
  optional string position = 5;
  optional string location = 6;
  optional string biography = 7;
  string created_at = 8;
  string updated_at = 9;
}

message GetInformationByCvIDRequest {
  string cv_id = 1;
}

message DeleteInformationByCvIDRequest {
  string cv_id = 1;
}

message DeleteInformationByCvIDResponse {
  bool success = 1;
}
